gravitee-apim-console-webui/src/components/alerts/alert/_alert.scss
.prevent-overlap {
  overflow-x: auto;
}
.gv-alerts-alert {
  md-tab-content {
    padding-bottom: 2rem;
  }

  .scrollable {
    overflow-x: auto;
    width: 100%;
    display: grid;
    flex-direction: row;
    flex-wrap: nowrap;
  }

  .gv-alerts-alert_trigger-msg {
    font-style: italic;
    margin: 1rem 0;
  }

  .gv-trigger-timeframe_form {
    margin-top: 0.5rem;
    --gv-expandable--bdb: thin dashed lightgray;
  }

  .gv-trigger-timeframe_form[open] {
    border-left: 1px dashed lightgray;
  }

  .gv-trigger-timeframe_form > div {
    padding-left: 1rem;
  }

  .gv-trigger-timeframe_form-details {
    padding-bottom: 1rem;
  }

  .md-tab.md-disabled {
    display: none !important;
  }
  .form {
    overflow: hidden;
    max-width: 960px;
  }
  md-tabs {
    display: inline;
  }
}

